@@ -1,4 +1,5 @@
 0.2.6
+Sped up loading of sessions with a lot of files.
 Removed some small error messages from startup.
 Fixed minor free bug when docviewer is disabled.
 Updated help file and translations.
